--- a/Dip/index.html
+++ b/Dip/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Type" content="text/html"; charset="utf-8" />
         <title>Dip Reciepe</title>
     </head>
 <body>
