one more change

--- a/Week 3/index.html
+++ b/Week 3/index.html
@@ -8,6 +8,7 @@
   <body>
     <article class= "recipe" id= "ab-onion-dip">
 	<div class="container">
+	
       <h1>Onion Dip from Scratch</h1>
 
       <!--<p><img src="alton-brown-onion-dip.jpg" alt="AB Onion Dip" /></p>-->
@@ -40,6 +41,7 @@
       <p>This dip is even better when made a day ahead. Just make sure that you cover it well with plastic wrap because fats (like sour cream) take in flavors and aromas hanging around the refrigerator like crazy old grandmas collect leftover gift wrapping.</p>
 
       <p>Source: <a href="http://altonbrown.com/onion-dip-recipe-from-scratch/">Alton Brown</a></p>
+	  </div>
     </article>
   </body>
 </html>
